# ITDS331_ROS2_FINAL_EXAM_MODULE

./: README.md  readme.md
ros2/install/: local_setup.sh  setup.sh
ros2/install/restaurant_robot/lib/restaurant_robot/: order_server
ros2/install/restaurant_robot/share/restaurant_robot/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2/install/turtlebot3_fake_node/include/turtlebot3_fake_node/: turtlebot3_fake_node.hpp
ros2/install/turtlebot3_fake_node/lib/turtlebot3_fake_node/: turtlebot3_fake_node
ros2/install/turtlebot3_fake_node/share/turtlebot3_fake_node/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2/install/turtlebot3_gazebo/include/turtlebot3_gazebo/: obstacle1.hpp  obstacle2.hpp  obstacles.hpp  traffic_bar_plugin.hpp  traffic_light_plugin.hpp  turtlebot3_drive.hpp
ros2/install/turtlebot3_gazebo/lib/turtlebot3_gazebo/: turtlebot3_drive
ros2/log/: latest_build  latest_test
ros2/src/restaurant_robot/: package.xml  setup.cfg  setup.py
ros2/src/restaurant_robot/restaurant_robot/: order_server.py
ros2/src/restaurant_world/: CMakeLists.txt  package.xml
ros2/src/restaurant_world/launch/: restaurant_world.launch.py
ros2/src/restaurant_world/maps/: restaurant_map.pgm  restaurant_map.yaml
ros2/src/restaurant_world/models/chair/: model.config  model.sdf
ros2/src/restaurant_world/models/plant_pot/: model.config  model.sdf
ros2/src/restaurant_world/models/table/: model.config  model.sdf
ros2/src/restaurant_world/worlds/: restaurant.world
(+220 files in other folders)
