<?xml version="1.0"?>
<package format="3">
  <name>restaurant_world</name>
  <version>0.0.1</version>
  <description>Restaurant world for TurtleBot3 (Kitchen + Tables + Obstacles) with maps</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
</package>
